tests/ui/const_prop/const-prop-ice.stderr
error: this operation will panic at runtime
  --> $DIR/const-prop-ice.rs:4:5
   |
LL |     [0; 3][3u64 as usize];
   |     ^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 3 but the index is 3
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to 1 previous error

