tests/ui/const_prop/const-prop-ice.rs
//@ build-fail

fn main() {
    [0; 3][3u64 as usize]; //~ ERROR this operation will panic at runtime
}
